--- a/src/pages/PrivatePage/Admin/ManageAdminPage.scss
+++ b/src/pages/PrivatePage/Admin/ManageAdminPage.scss
@@ -6,22 +6,51 @@ $icon-color: #505050;
 
 .dashboard-page {
     display: flex;
-    min-height: 100vh;
 
     .navbar {
-        box-shadow: 0 0 10px rgba(243, 107, 107, 0.1);
+        transition: all 0.3s ease;
 
-        .hidden {
-            display: none !important;
+        &.closed {
+            width: 0;
+            overflow: hidden;
         }
 
+        &.open {
+            width: 250px;
+        }
     }
 
     .content {
-        flex: 1;
+        flex-grow: 1;
         padding: 20px;
-        background-color: $white-color;
-        color: #343a40;
-        overflow: hidden;
+
+        .toggle-navbar-btn {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            color: $icon-color;
+
+            &:hover {
+                color: $primary-color;
+            }
+        }
+
+        a {
+            color: $primary-color;
+            text-decoration: none;
+            margin-top: 10px;
+            display: block;
+            margin-bottom: 10px;
+            /* Adjust this to increase/decrease the gap */
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+
+    .admin-list {
+        margin-top: 15px;
+        /* Adjust this to control spacing */
     }
 }
