update crud category

--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -4,7 +4,7 @@ $color-hover: #3b4b5a; // Màu nền khi hover
 $color-text: #ecf0f1; // Màu chữ
 $color-text-muted: #bdc3c7; // Màu chữ mờ
 
-$font-family: 'Arial', sans-serif; // Font chính
+$font-family: 'Golos Text', sans-serif; // Font chính
 $font-size-base: 15px; // Kích thước font cơ bản
 $font-size-small: 14px; // Font nhỏ
 $font-size-large: 23px; // Font lớn icon
